manifests/grafana-operator-extension/management-eu-central-1/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: https
  hostnames:
    - grafana.management.eu-central-1.localhost
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
