manifests/grafana-operator-extension/management-eu-central-1/authorization-policy-allow-within-namespace.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-within-namespace
  namespace: grafana
spec:
  rules:
    - from:
        - source:
            namespaces:
              - grafana
