manifests/grafana-operator-extension/management-eu-central-1/authz-allow-istio-gateway.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-istio-gateway
  namespace: grafana
spec:
  rules:
    - from:
        - source:
            namespaces:
              - istio-system
